--- a/mobile/codeblurb/lib/l10n/intl_en.arb
+++ b/mobile/codeblurb/lib/l10n/intl_en.arb
@@ -1,3 +1,11 @@
 {
-  "dummy": "dummy"
+  "percentageComplete": "{percentage}% completed",
+  "@percentageComplete": {
+    "placeholders": {
+      "percentage": {
+        "type": "int"
+      }
+    }
+  },
+  "completed": "completed"
 }
