--- a/mobile/codeblurb/lib/l10n/intl_hu.arb
+++ b/mobile/codeblurb/lib/l10n/intl_hu.arb
@@ -7,5 +7,17 @@
       }
     }
   },
-  "completed": "completed"
+  "completed": "completed",
+  "show": "show",
+  "hide": "hide",
+  "validationRequired": "This field cannot be empty",
+  "validationEmail": "This field requires a valid email address",
+  "validationPasswordLength": "Password length must be at least 8 characters long",
+  "validationPasswordMatch": "Passwords must match",
+  "username": "Username",
+  "password": "Password",
+  "welcomeMessage": "Welcome to CodeBlurb!",
+  "signIn": "Sign In",
+  "createAccount": "Create An Account",
+  "register": "Register"
 }
