--- a/mobile/codeblurb/lib/l10n/intl_hu.arb
+++ b/mobile/codeblurb/lib/l10n/intl_hu.arb
@@ -19,5 +19,8 @@
   "welcomeMessage": "Welcome to CodeBlurb!",
   "signIn": "Sign In",
   "createAccount": "Create An Account",
-  "register": "Register"
+  "register": "Register",
+  "back": "Back",
+  "enterCredentials": "Enter Your Credentials",
+  "confirmPassword": "Confirm Password"
 }
